--- a/NearMe/NearMe/Base.lproj/Main.storyboard
+++ b/NearMe/NearMe/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="15A204h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="NearMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +15,113 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ehX-Ci-W73">
+                                <rect key="frame" x="262" y="285" width="76" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Go to login">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="HHi-7a-6Bj" kind="show" id="ay0-ki-csi"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="ehX-Ci-W73" secondAttribute="centerY" id="gpv-ru-Yrn"/>
+                            <constraint firstAttribute="centerX" secondItem="ehX-Ci-W73" secondAttribute="centerX" id="z2s-mQ-D1B"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="571" y="399"/>
+        </scene>
+        <!--Login View Controller-->
+        <scene sceneID="5G3-9K-0Yz">
+            <objects>
+                <viewController id="HHi-7a-6Bj" customClass="LoginViewController" customModule="NearMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="W5a-E0-BIw"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Ru-O1-YzF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sdG-iZ-LSS">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NearMe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Poa-JO-LGr">
+                                <rect key="frame" x="221" y="55" width="159.5" height="55"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="46"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tgL-jn-okX">
+                                <rect key="frame" x="16" y="265" width="568" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5O6-3k-yXT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F64-VX-7IE">
+                                <rect key="frame" x="321" y="550" width="38" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Login">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginButtonTapped" destination="HHi-7a-6Bj" eventType="touchUpInside" id="iNW-Ak-so2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tdr-5h-IVU">
+                                <rect key="frame" x="232.5" y="550" width="55" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Sign Up">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="signupButtonTapped" destination="HHi-7a-6Bj" eventType="touchUpInside" id="iqt-Eb-laa"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Em2-Fm-5Rr">
+                                <rect key="frame" x="16" y="305" width="568" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="pSa-5z-mI6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5Ru-O1-YzF" firstAttribute="top" secondItem="F64-VX-7IE" secondAttribute="bottom" constant="20" id="28a-X9-pLo"/>
+                            <constraint firstAttribute="centerX" secondItem="F64-VX-7IE" secondAttribute="centerX" constant="-40" id="5rg-Cc-RQ8"/>
+                            <constraint firstAttribute="centerX" secondItem="Poa-JO-LGr" secondAttribute="centerX" id="5yV-Um-tWv"/>
+                            <constraint firstItem="Poa-JO-LGr" firstAttribute="top" secondItem="W5a-E0-BIw" secondAttribute="bottom" constant="35" id="AXD-J0-I6M"/>
+                            <constraint firstAttribute="centerY" secondItem="Em2-Fm-5Rr" secondAttribute="centerY" constant="-20" id="Rg4-Zh-w9e"/>
+                            <constraint firstItem="tgL-jn-okX" firstAttribute="leading" secondItem="sdG-iZ-LSS" secondAttribute="leading" constant="16" id="gFj-QR-jQC"/>
+                            <constraint firstAttribute="trailing" secondItem="tgL-jn-okX" secondAttribute="trailing" constant="16" id="oTz-ea-aQe"/>
+                            <constraint firstAttribute="trailing" secondItem="Em2-Fm-5Rr" secondAttribute="trailing" constant="16" id="oaz-Lf-Zsq"/>
+                            <constraint firstItem="5Ru-O1-YzF" firstAttribute="top" secondItem="tdr-5h-IVU" secondAttribute="bottom" constant="20" id="ocZ-4e-M35"/>
+                            <constraint firstAttribute="centerX" secondItem="tdr-5h-IVU" secondAttribute="centerX" constant="40" id="tIJ-s4-LHr"/>
+                            <constraint firstItem="Em2-Fm-5Rr" firstAttribute="leading" secondItem="sdG-iZ-LSS" secondAttribute="leading" constant="16" id="wC0-pT-93V"/>
+                            <constraint firstAttribute="centerY" secondItem="tgL-jn-okX" secondAttribute="centerY" constant="20" id="zWb-hP-2V4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="tgL-jn-okX" id="cir-sA-1ud"/>
+                        <outlet property="passwordtextField" destination="Em2-Fm-5Rr" id="RCP-vq-BHs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lx0-UU-k1J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1369" y="399"/>
         </scene>
     </scenes>
 </document>
