--- a/GreylockCloudCode/public/style.css
+++ b/GreylockCloudCode/public/style.css
@@ -2,11 +2,13 @@ body {
         font-family: Helvetica, Arial, sans-serif;
     }
     
-    div {
+    .wrapper {
         width: 800px;
         height: 400px;
-        margin: 40px auto;
-        padding: 20px;
+	/*vertical-align:middle;*/
+margin-left:auto;
+margin-right:auto;
+padding-top:200px;
         border: .5px solid #5298fc;
 background-color: #efefef;
 	opacity: .75;
@@ -20,6 +22,7 @@ background-color: #efefef;
     
     p {
         margin: 40px 0;
+text-align:center;
     }
     
     em {
